# MPF

./: Makefile  README.md
4D-Equation/: CMakeLists.txt  main.cpp
4D-Equation/src/: main.cpp  pso.c  pso.cpp  pso.hpp
Final/: main.py
Poisson/: entities.cpp  entities.hpp  generateImg.cpp  generateImg.hpp  main.cpp
Poisson/Output/: Image_0  Image_10  Image_100  Image_110  Image_120  Image_130  Image_140  Image_150  Image_160  Image_170  Image_180  Image_190  Image_20  Image_200  Image_210  Image_220  Image_230  Image_240  Image_250  Image_260  Image_270  Image_280  Image_290  Image_30  Image_300  Image_310  Image_320  Image_330  Image_340  Image_350  Image_360  Image_370  Image_380  Image_390  Image_40  Image_400  Image_410  Image_420  Image_430  Image_440  (+6 more)
Pso/: Makefile  README
Pso/.svn/: wc.db
Pso/example/: example
Pso/src/: cfunc.cpp  main.cpp  pgl_pso.cpp  pgl_pso.hpp  pgl_wrap.cpp  pso.cpp  pso.hpp
Template/: pgl_Makefile_C
Template/src/: .main.c.un~  func.f95  main_imp.f95  pgl_pso.c  pgl_wrap.c  pso.h
src/: main.c  pgl_bind_mod.f95  pgl_main.f95  pso.c
